@startuml
skinparam linetype ortho

class universe {
    <U>Universe_id: Int
	Name: Name
    Description: Text
}

class title {
    <U>Title_id: Int
    Date: Date
    Title: Text
    Length: Time
}

class award {
    <U>Award_id: Int
    Award_name: Name
}

class category {
		<U>Category_id: Int
    	Category: Name
}

class people {
    <U>People_id: Int
	Name: Name
    Birth_year: Date
    Death_year: Date
}

class watchlist {
}

class user {
    <U>User_id: Int
	Pseudo: Name
    Inscription_date: Date
}

class review {
    <U>Review_id: Int
    Rating: Int
    Creation: Date
    Body: Text
}

class role {
    <U>Role_id: Int
	Job: Name
    character: Name
}

class title_category{
}

universe "0..1" -- "2..*" title
title "0..*" -- "1..*" people
title "1" -- "0..*" review
title "0..1" -- "0..*" award
title "1..*" -- "1..*" category
review "0..*" -- "1" user
user "0..*" -- "0..*" title

(title, people) .. role
(title, user) .. watchlist
(title, category) .. title_category
@enduml
